# Project_SCPA

./: Makefile  README.md  bash.sh  cuda.sh  cuda_test.sh  openmp.sh  openmp_threads.sh
lib/: mmio.h  utils.h  utils_cuda.cuh
results/: cuda_csr_hll.py  cuda_csr_hll_gflops.py  cuda_csr_hll_speedup.py  cuda_print_graph.sh  cuda_scheduling.py  cuda_threads_per_block.py  openmp_comparison.py  openmp_csr_hll.py  openmp_csr_hll_gflops.py  openmp_csr_hll_speedup.py  openmp_print_graph.sh  openmp_scheduling.py  openmp_scheduling_totaltime.py  openmp_threads.py  openmp_threads_gflops.py  openmp_threads_speedup.py  openmp_threads_speedup_efficiency.py  preprocessing_comparison.py  print_graph.sh  warp_comparison.py
results/cuda/: best_performance.csv  best_speedup.csv  performance.csv  performance_warp.csv  speedup.csv  speedup_warp.csv
results/openmp/: performance.csv  performance_guided.csv  performance_threads.csv  preprocessing.csv  speedup.csv  speedup_guided.csv  speedup_threads.csv
src/common/: converter.c  mediator.c  mmio.c  performance.c  reader.c  serial_prod.c  utils.c
src/cuda/: CMakeLists.txt  execution.cu  main.cu  parallel_prod.cu
src/openmp/: execution.c  main.c  main_threads.c  parallel_prod.c
